    - Added support for postformatter in Layout. The postformatter will be run after
      the formatters called from a layout.
    - Fixed bug: editing source doesn't allow change of entry type.
    - RTFChars formatter now converts --- to \emdash and -- to \endash.

2.6b
    - Added pages information to several entry types in Endnote export.
    - Modified LastPage formatter so it returns the number when only the number of pages is given.
    - Modified search algorithms so LaTeX commands are removed before search. For instance, this
      means that the value "test \textit{case}" now matches the search string "test case".
    - Changed default table font family to "SansSerif".
    - Can now create lock file while writing a bib file. The lock file is checked before
      saving, and before scanning an externally changed file, in order to avoid reading an
      unfinished file.
    - Added support for dragging a file link from the file column to another application.
    - Added toolbar button and shortcut (Alt-F) in entry editor for autosetting file links.
    - Improved ISI import filter so DOI information is included.
    - Fixed bug: metadata changes would not be detected as external changes to a database.
    - Fixed bug: when accepting external changes and not saving before new changes are
      detected, the previously accepted changes would also be listed.
    - Fixed bug in Scifinder import where an empty Inventor field could overwrite the
      author field.
    - Fixed bug in autocompleter. Current suggested completion would be added to the field
      if the user closed the entry editor or mouse clicked on another field.
    - Fixed problem with exporting to some MySql versions. Patch by François Dorin. 
    - Fixed bug in handling of LaTeX character sequences - now sequences with = as command
      character (e.g. "\={A}") are recognized.
    - Fixed bug: gray out / hide setting in groups panel is overridden on startup