@@ -1,3 +1,5 @@
+    - Improved autocompletion for the "journal" field. Will now autocomplete on entries in
+      the current journal abbreviations list.
     - Added support for postformatter in Layout. The postformatter will be run after
       the formatters called from a layout.
     - Fixed bug: editing source doesn't allow change of entry type.
